Revise KNN-CLAS report to clarify dataset overlap descriptions, enhancing accuracy of classification insights.

--- a/report/KNN-CLAS.tex
+++ b/report/KNN-CLAS.tex
@@ -186,7 +186,7 @@ The likelihood distributions for each dataset, as shown in Figures \ref{fig:bank
 \begin{itemize}
     \item \textbf{Clear Separation:} Datasets such as Banknote, Breast Cancer, and Binary Digits exhibit well-separated clusters along the axes. This indicates that the KNN classifier assigns high confidence to most samples, resulting in distinct class boundaries. These datasets are characterized by low class overlap and high separability, which aligns with the high accuracy observed in Table \ref{tab:accuracy}.
 
-    \item \textbf{Moderate Overlap:} Datasets like Ionosphere, Pima Diabetes, and Sonar show moderate overlap between the two classes. While the clusters are still distinguishable, a significant number of points lie near the diagonal, indicating ambiguous classifications. This overlap may contribute to slightly lower accuracy compared to datasets with clear separation.
+    \item \textbf{Moderate Overlap:} Datasets like Ionosphere and Pima Diabetes show moderate overlap between the two classes. While the clusters are still distinguishable, a significant number of points lie near the diagonal, indicating ambiguous classifications. This overlap may contribute to slightly lower accuracy compared to datasets with clear separation.
 
     \item \textbf{Significant Overlap:} Haberman and SPECT Heart datasets display substantial overlap, with many points concentrated near the diagonal. This suggests that the KNN classifier struggles to confidently assign class labels, likely due to inherent noise or feature overlap in the data. These datasets also exhibit lower accuracy and higher ambiguity in classification.
 
