Enhance KNN-CLAS report by updating figures, adding accuracy, metadata, statistics, support samples, and timing tables for improved clarity and detail.

--- a/report/KNN-CLAS.tex
+++ b/report/KNN-CLAS.tex
@@ -125,56 +125,56 @@ Table \ref{tab:statistics} summarizes the dataset characteristics, including cla
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Banknote_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Banknote_likelihoodk5.png}
     \caption{Likelihood comparison for the Banknote dataset.}
     \label{fig:banknote_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Binary Digits_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Binary Digits_likelihoodk5.png}
     \caption{Likelihood comparison for the Binary Digits dataset.}
     \label{fig:binary_digits_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Breast Cancer_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Breast Cancer_likelihoodk5.png}
     \caption{Likelihood comparison for the Breast Cancer dataset.}
     \label{fig:breast_cancer_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Haberman_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Haberman_likelihoodk5.png}
     \caption{Likelihood comparison for the Haberman dataset.}
     \label{fig:haberman_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Ionosphere_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Ionosphere_likelihoodk5.png}
     \caption{Likelihood comparison for the Ionosphere dataset.}
     \label{fig:ionosphere_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Pima Diabetes_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Pima Diabetes_likelihoodk5.png}
     \caption{Likelihood comparison for the Pima Diabetes dataset.}
     \label{fig:pima_diabetes_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Sonar_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/Sonar_likelihoodk5.png}
     \caption{Likelihood comparison for the Sonar dataset.}
     \label{fig:sonar_likelihood}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/SPECT Heart_likelihood.png}
+    \includegraphics[width=0.45\textwidth]{../scripts/comparison_results/SPECT Heart_likelihoodk5.png}
     \caption{Likelihood comparison for the SPECT Heart dataset.}
     \label{fig:spect_heart_likelihood}
 \end{figure}
