Add input_space_statistical_validation function for statistical validation of KNN and KNN_CLAS models
- Implemented a function to perform statistical validation on datasets.
- Added cross-validation and metric storage for accuracy, precision, recall, and F1 score.
- Included statistical tests (Wilcoxon with Bonferroni correction) and bootstrap confidence intervals for precision.
- Added permutation test for comparing precision between KNN and KNN_CLAS models.
- Results are structured for easy access and saved to a JSON file.

--- a/likelihood_analysis/likelihood_analysis.ipynb
+++ b/likelihood_analysis/likelihood_analysis.ipynb
@@ -1050,10 +1050,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
+    "def input_space_statistical_validation(\n",
+    "  datasets: dict,\n",
+    "  set_name: str,\n",
+    "  k: int = 5,\n",
+    "  n_splits: int = 30,\n",
+    "  n_bootstraps: int = 100,\n",
+    "  n_permutations: int = 10000\n",
+    ") -> dict:\n",
+    "  \"\"\"\n",
+    "  Perform statistical validation of KNN and KNN_CLAS models on a dataset.\n",
     "\n",
-    "for dataset in datasets:\n",
-    "  pass"
+    "  Parameters:\n",
+    "  - datasets (dict): Dictionary containing all datasets.\n",
+    "  - set_name (str): Name of the dataset to validate.\n",
+    "  - k (int): Number of neighbors for KNN.\n",
+    "  - n_splits (int): Number of cross-validation splits.\n",
+    "  - n_bootstraps (int): Number of bootstrap iterations.\n",
+    "  - n_permutations (int): Number of permutations for permutation test.\n",
+    "\n",
+    "  Returns:\n",
+    "  - dict: Hierarchical results containing metrics and statistical tests.\n",
+    "  \"\"\"\n",
+    "  # Load dataset\n",
+    "  X = datasets[set_name]['X']\n",
+    "  y = datasets[set_name]['y'].ravel()\n",
+    "  \n",
+    "  # Initialize models and metrics storage\n",
+    "  model_constructors = {\n",
+    "    \"KNN\": lambda: KNN(k=k),\n",
+    "    \"KNN_CLAS\": lambda: KNN_CLAS(k=k)\n",
+    "  }\n",
+    "  metrics = ['accuracy', 'precision', 'recall', 'f1']\n",
+    "  results = {\n",
+    "    'model_metrics': {name: {m: [] for m in metrics} for name in model_constructors},\n",
+    "    'statistical_tests': {\n",
+    "      'wilcoxon': {m: {} for m in metrics},\n",
+    "      'bootstrap_precision_ci': [],\n",
+    "      'permutation_p_value': None\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  # Cross-validation\n",
+    "  kf = KFold(n_splits=n_splits, shuffle=True)\n",
+    "  for train_idx, test_idx in kf.split(X):\n",
+    "    X_train, X_test = X[train_idx], X[test_idx]\n",
+    "    y_train, y_test = y[train_idx], y[test_idx]\n",
+    "\n",
+    "    for model_name in model_constructors:\n",
+    "      model = model_constructors[model_name]()\n",
+    "      model.fit(X_train, y_train)\n",
+    "      y_pred = model.predict(X_test)\n",
+    "      \n",
+    "      # Store metrics\n",
+    "      results['model_metrics'][model_name]['accuracy'].append(accuracy_score(y_test, y_pred))\n",
+    "      results['model_metrics'][model_name]['precision'].append(precision_score(\n",
+    "        y_test, y_pred, average='weighted', zero_division=0))\n",
+    "      results['model_metrics'][model_name]['recall'].append(recall_score(\n",
+    "        y_test, y_pred, average='weighted', zero_division=0))\n",
+    "      results['model_metrics'][model_name]['f1'].append(f1_score(\n",
+    "        y_test, y_pred, average='weighted', zero_division=0))\n",
+    "\n",
+    "  # Statistical tests (Wilcoxon with Bonferroni)\n",
+    "  bonferroni_alpha = 0.05 / len(metrics)\n",
+    "  for metric in metrics:\n",
+    "    knn_data = results['model_metrics']['KNN'][metric]\n",
+    "    knn_clas_data = results['model_metrics']['KNN_CLAS'][metric]\n",
+    "    stat, p_value = wilcoxon(knn_data, knn_clas_data)\n",
+    "    results['statistical_tests']['wilcoxon'][metric] = {\n",
+    "      'p_value': float(p_value),\n",
+    "      'significant': p_value < bonferroni_alpha\n",
+    "    }\n",
+    "\n",
+    "  # Bootstrap CI for precision\n",
+    "  def bootstrap_stat():\n",
+    "    X_res, y_res = resample(X, y, replace=True)\n",
+    "    knn = KNN(k=k).fit(X_res, y_res)\n",
+    "    knn_clas = KNN_CLAS(k=k).fit(X_res, y_res)\n",
+    "    return (precision_score(y_res, knn_clas.predict(X_res), average='weighted', zero_division=0) -\n",
+    "            precision_score(y_res, knn.predict(X_res), average='weighted', zero_division=0))\n",
+    "  \n",
+    "  boot_diffs = [bootstrap_stat() for _ in range(n_bootstraps)]\n",
+    "  results['statistical_tests']['bootstrap_precision_ci'] = [\n",
+    "    float(np.percentile(boot_diffs, 2.5)),\n",
+    "    float(np.percentile(boot_diffs, 97.5))\n",
+    "  ]\n",
+    "\n",
+    "  # Permutation test\n",
+    "  knn_prec = results['model_metrics']['KNN']['precision']\n",
+    "  knn_clas_prec = results['model_metrics']['KNN_CLAS']['precision']\n",
+    "  perm_result = permutation_test(\n",
+    "    (knn_clas_prec, knn_prec), \n",
+    "    lambda x, y: np.mean(x) - np.mean(y), \n",
+    "    n_resamples=n_permutations\n",
+    "  )\n",
+    "  results['statistical_tests']['permutation_p_value'] = float(perm_result.pvalue)\n",
+    "\n",
+    "  # Convert numpy types to native Python types for JSON\n",
+    "  for model in results['model_metrics']:\n",
+    "    for metric in results['model_metrics'][model]:\n",
+    "      results['model_metrics'][model][metric] = [float(v) for v in results['model_metrics'][model][metric]]\n",
+    "\n",
+    "  return results\n",
+    "\n",
+    "final_results = {}\n",
+    "for dataset_name in datasets:\n",
+    "  final_results[dataset_name] = input_space_statistical_validation(\n",
+    "    datasets, dataset_name, k=5\n",
+    "  )\n",
+    "\n",
+    "# Save to JSON\n",
+    "import json\n",
+    "with open('results.json', 'w') as f:\n",
+    "  json.dump(final_results, f, indent=2)"
    ]
   }
  ],
